# edpop-explorer

./: .readthedocs.yaml  =  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: README.md  conf.py  edpop_explorer.readers.rst  edpop_explorer.rst  index.rst  introduction.rst  modules.rst
edpop_explorer/: M21_fields.csv  __init__.py  __main__.py  apireader.py  cerl.py  edpopxshell.py  fields.py  marc21.py  normalizers.py  rdf.py  reader.py  record.py  sparqlreader.py  sql.py  srumarc21reader.py  srureader.py
edpop_explorer/external_data/: deutsche_isil_agentur.py
edpop_explorer/normalization/: relators.py
edpop_explorer/readers/: README_USTC.md  __init__.py  bibliopolis.py  bnf.py  cerl_thesaurus.py  dutch_almanacs.py  estc.py  fbtee.py  gallica.py  hpb.py  kb.py  kvcs.py  pierre_belle.py  sbtireader.py  stcn.py  test_classes.py  ustc.py  utils.py  vd.py
edpop_explorer/readers/data/: biblio_dutchalmanacs.csv  biblio_kvcs.csv  biblio_pierrebelle.csv
tests/: TESTDATA  conftest.py  test_allreaders.py  test_field.py  test_reader.py  test_record.py  test_srureader.py
tests/external_data/: test_deutsche_isil_agentur.py
tests/readers/: test_estc.py  test_kb.py  test_stcn.py
