[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "edpop-explorer"
version = "0.3.0"
dependencies = [
  "sruthi@git+https://github.com/UUDigitalHumanitieslab/sruthi@feature/additional-params",
  "termcolor",
  "appdirs",
  "SPARQLWrapper",
  'pyreadline3 ; platform_system == "Windows"',
  'colorama ; platform_system == "Windows"',
  'pandas',
  'cmd2',
  'pyyaml',
]

[project.scripts]
edpopx = "edpop_explorer.__main__:main"

[tool.pytest.ini_options]
pythonpath = [
  "edpop_explorer"
]

[tool.setuptools.packages.find]
where = ["."]
