[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "edpop-explorer"
version = "0.5.0"
authors = [
  {name="Utrecht University, Centre for Digital Humanities - Research Software Lab", email="cdh@uu.nl"}
]
dependencies = [
  "sruthi>=2.0.0,<3",
  "termcolor",
  "appdirs",
  "SPARQLWrapper",
  'pyreadline3 ; platform_system == "Windows"',
  'colorama ; platform_system == "Windows"',
  'cmd2',
  'pyyaml',
  'rdflib>=7.0.0,<8',
  'Pygments',
]

description = "Common interface to multiple library catalogues and bibliographical databases"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  'Development Status :: 2 - Pre-Alpha',
  'Environment :: Console',
  'Intended Audience :: Science/Research',
  'License :: OSI Approved :: BSD License',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3'
]

[project.optional-dependencies]
dev = [
  'pytest',
  'sphinx',
  'ruff',
]

[project.urls]
"Homepage" = "https://github.com/UUDigitalHumanitieslab/edpop-explorer"

[project.scripts]
edpopx = "edpop_explorer.__main__:main"

[tool.pytest.ini_options]
pythonpath = [
  "edpop_explorer"
]

[tool.setuptools.packages.find]
where = ["."]
